--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "backend": "file:",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4",
+    "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1"
   },
   "description": ""
