--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "gearPIT sells riding gears, helmets, accessories with discounted price in Guwahati, Assam. Rynox, Axor, SMK, MT, Axxis",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "gearPitIcon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "gearPitIcon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "gearPitIcon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
